# FastApiTemplate

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
app/: __init__.py  main.py
app/general/: __init__.py  config.py  logger.py
app/general/database/: __init__.py  basic_api.py  ftp_client.py  kube_client.py
app/general/middlewares/: __init__.py  exception.py  log_request.py  time_request.py
app/general/models/: __init__.py  handler.py
app/general/routes/: __init__.py  exception.py  metrics.py  probes.py  swagger.py
app/general/tasks/: __init__.py  uptime.py
app/general/utils/: __init__.py  config.py  logger.py
app/src/: __init__.py
fastapi_template/_internal/: __init__.py
fastapi_template/_internal/routes/: __init__.py
fastapi_template/_internal/utils/: config.py
horizen_fastapi_template/: utils.py
horizen_fastapi_template/_internal/: __init__.py
horizen_fastapi_template/_internal/database/: __init__.py  basic_api.py  bitbucket_api.py
horizen_fastapi_template/_internal/middlewares/: log_request.py
horizen_fastapi_template/_internal/routes/: __init__.py  qraphql.py
horizen_fastapi_template/_internal/utils/: config.py  logger.py
horizen_fastapi_template/static/graphiql/static/css/: graphiql.min.css
horizen_fastapi_template/static/graphiql/static/js/: graphiql.min.js
horizon_fastapi_template/: __init__.py  utils.py
horizon_fastapi_template/_internal/models/: graphql.py
horizon_fastapi_template/_internal/routes/: qraphql.py
horizon_fastapi_template/_tests/: test_root.py
horizon_fastapi_template/static/graphiql/static/js/: graphiql.min.js  react-dom.production.min.js
horizon_fastapi_template/tests/database/: basic_api_test.py  ftp_client_test.py
package/fastapi_tash/: __init__.py  application.py
package/fastapi_tash/_internal/: __init__.py
package/fastapi_tash/_internal/general/: __init__.py
package/fastapi_tash/_internal/general/middlewares/: __init__.py  exception.py
package/fastapi_tash/_internal/src/: __init__.py
scripts/: base_requirements.txt  init.bat  init.sh
src/fastapi_template/: __init__.py  application.py
src/fastapi_template/_internal/: __init__.py
src/fastapi_template/_internal/general/: __init__.py
src/fastapi_template/_internal/middlewares/: log_request.py
src/fastapi_template/_internal/models/: __init__.py
src/fastapi_template/_internal/routes/: metrics.py  probes.py  swagger.py
src/fastapi_template/_internal/src/: __init__.py
(+15 files in other folders)
